--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/cli-plugin-pwa": "^5.0.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
-    "register-service-worker": "^1.7.2",
     "vue": "^3.5.13",
     "vue-awesome-paginate": "^1.2.0",
     "vue-router": "^4.5.0"
@@ -22,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.2.1",
+    "vite-plugin-pwa": "^1.0.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
