--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "firebase": "^12.0.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
