--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "http://13.124.226.44/api/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/"
     }
