--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "firebase": "^12.0.0",
