--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.23",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "firebase": "^12.0.0",
     "moment": "^2.30.1",
     "pinia": "^3.0.3",
